<resources>
    <string name="app_name">BuckIt</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Buckets</string>
    <string name="menu_achievement_wall">Achievement Wall</string>
    <string name="menu_inspiration_feed">Inspiration Feed</string>
    <string name="menu_search">Search</string>
    <string name="menu_settings">Settings</string>
    <string name="lemonricottacrossed">  <strike> Lemon Ricotta Cake </strike> </string>
    <string name="friedricecrossed">  <strike> Shrimp Fried Rice </strike> </string>
    <string name="new_goal">goal...</string>
    <string name="new_subgoal">subgoal...</string>
    <string name="x">x</string>
    <string name="strikethrough_miami"><strike>Miami beach</strike></string>
    <string name="strikethrough_friedrice"><strike>Shrimp Fried Rice</strike></string>
    <string name="strikethrough_lemoncake"><strike>Lemon Ricotta Cake</strike></string>
    <string name="strikethrough_himself"><strike>Himself</strike></string>
    <string name="strikethrough_becoming"><strike>Becoming</strike></string>
</resources>
