<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_bucket"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_achievement_wall"
            android:icon="@drawable/ic_star"
            android:title="@string/menu_achievement_wall" />
        <item
            android:id="@+id/nav_inspiration_feed"
            android:icon="@drawable/ic_light_bulb"
            android:title="@string/menu_inspiration_feed" />
        <item
            android:id="@+id/nav_search"
            android:icon="@drawable/ic_search"
            android:title="@string/menu_search" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings"
            android:title="@string/menu_settings" />
    </group>
</menu>