<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.buckit.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.buckit.ui.achievementWall.AchievementWallFragment"
        android:label="@string/menu_achievement_wall"
        tools:layout="@layout/fragment_achievement_wall" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.buckit.ui.inspirationFeed.InspirationFeedFragment"
        android:label="@string/menu_inspiration_feed"
        tools:layout="@layout/fragment_inspiration_feed" />
</navigation>